--- a/app/confluence.yml
+++ b/app/confluence.yml
@@ -13,15 +13,15 @@ settings:
     admin_password: admin
     load_executor: locust           # jmeter and locust are supported. jmeter by default.
     concurrency: 200                # number of concurrent virtual users for jmeter or locust scenario
-    test_duration: 45m
-    ramp-up: 5m                     # time to spin all concurrent users
-    total_actions_per_hour: 20000
+    test_duration: 5m
+    ramp-up: 5s                     # time to spin all concurrent users
+    total_actions_per_hour: 200
     WEBDRIVER_VISIBLE: False
     JMETER_VERSION: 5.2.1
     LANGUAGE: en_US.utf8
     allow_analytics: Yes            # Allow sending basic run analytics to Atlassian. These analytics help us to understand how the tool is being used and help us to continue to invest in this tooling. For more details please see our README.
     # Action percentage for JMeter and Locust load executors
-    view_page: 54
+    view_page: 24
     view_dashboard: 6
     view_blog: 8
     search_cql: 7
@@ -31,7 +31,7 @@ settings:
     view_attachment: 3
     upload_attachment: 5
     like_page: 3
-    standalone_extension: 0 # By default disabled
+    standalone_extension: 30 # By default disabled
     # Custom dataset section.
     custom_dataset_query:           # Write CQL query to add CQL output to the app/datasets/confluence/custom_pages.csv, e.g. "title ~ 'AppPage*'"
 services:
